doc: Update health endpoint documentation
